Fixed 20. But it jumps by anchor instead of centering. To discuss with designer if it should jump or not.

--- a/css/mapa.css
+++ b/css/mapa.css
@@ -37,6 +37,7 @@ img {
   min-height:200px;
   margin: -13% 0 0 -35%;
   display:table;
+  cursor: auto;
 }
 
 #dialog_header {
